		'tunefs.lustre --param="ost.quota_type=ug1" $MDTDEV'
		or (for 1.4.12/1.6.5 quota files)
		'tunefs.lustre --param="mdt.quota_type=ug2" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'
	  For more information, please refer to bugzilla 13904.
	* Output of lfs quota has been made less detailed by default,
	  old (verbose) output can be obtained by using -v option.

Severity   : enhancement
Bugzilla   : 16633
Description: Update to RHEL5 kernel-2.6.18-92.1.10.el5.

Severity   : enhancement
Bugzilla   : 16547
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.27.

Severity   : enhancement
Bugzilla   : 16566
Description: Upcall on Lustre log has been dumped
Details    : Allow for a user mode script to be called once a Lustre log has
             been dumped. It passes the filename of the dumped log to the
	     script, the location of the script can be specified via
	     /proc/sys/lnet/debug_log_upcall.

Severity   : minor
Bugzilla   : 16583
Frequency  : rare
Description: avoid messages about idr_remove called for id  which is not allocated.
Details    : Move assigment s_dev for clustered nfs to end of initialization, for
             avoid problem with error handling.

Severity   : minor
Bugzilla   : 16583
Frequency  : rare
Description: avoid messages about idr_remove called for id  which is not allocated.
Details    : Move assigment s_dev for clustered nfs to end of initialization, for avoid
             problem with error handling.

Severity   : minor
Bugzilla   : 16109
Frequency  : rare
Description: avoid Already found the key in hash [CONN_UNUSED_HASH] messages
Details    : When connection is reused this not moved from CONN_UNUSED_HASH into
             CONN_USED_HASH and this prodice warning when put connection again
             in unused hash.

Severity   : enhancement
Bugzilla   : 16573
Description: Export bytes_read/bytes_write count on OSC/OST.

Severity   : normal
Bugzilla   : 16237